Add: Sample screenshots Update: README